--- a/Markkinasimulaattori/pom.xml
+++ b/Markkinasimulaattori/pom.xml
@@ -47,6 +47,11 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.3</version>
+                <configuration>
+                    <excludes>
+                        <exclude>ui/*</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -85,7 +90,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>systems.Run</mainClass>
+                                    <mainClass>ui.Run</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
